<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SellingEditActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white">

            <TextView
                android:id="@+id/tv_appbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auction_edit_title"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:fontFamily="@font/brandfont"
                android:textStyle="bold"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/complete"
                android:background="@null"
                android:layout_gravity="right"
                android:fontFamily="@font/brandfont"
                android:textStyle="bold"
                android:textSize="13sp"
                android:textColor="@color/brand"/>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/scrollview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    android:orientation="horizontal" />

            </androidx.core.widget.NestedScrollView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_image"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:background="@drawable/bg_selectimage_sellingedit"
                android:backgroundTint="#4B000000"
                android:drawableStart="@drawable/camera"
                android:layout_below="@id/scrollview"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:text="@string/image_count" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#997A7A7A"
                android:layout_below="@id/btn_image"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


            <EditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_below="@id/view1"
                android:background="@drawable/bg_edit"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:padding="8dp"
                android:hint="@string/selling_edit_title_hint"
                android:maxEms="15"
                android:textSize="16sp"
                android:inputType="text"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textColorHint="#4A000000"
                android:fontFamily="@font/brandfont"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/category_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/et_title">
                <TextView
                    android:id="@+id/tv_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selling_edit_category"
                    android:textSize="16sp"
                    android:textColor="#61000000"
                    android:fontFamily="@font/brandfont"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/ib_select_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_select"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/tv_category"
                    android:background="@null"
                    android:layout_marginRight="30dp"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/price_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/category_relative"
                android:layout_marginTop="20dp"
                >

                <ImageView
                    android:id="@+id/iv_won"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/won_featured"
                    android:layout_marginLeft="20dp"
                    app:tint="#4A000000"/>

                <EditText
                    android:id="@+id/et_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:layout_toRightOf="@id/iv_won"
                    android:layout_marginLeft="10dp"
                    android:hint="시작 가격"
                    android:inputType="number"
                    android:textCursorDrawable="@drawable/edit_cursor"
                    android:textSize="16sp"
                    android:textColorHint="#4A000000"
                    android:fontFamily="@font/brandfont"
                    android:textStyle="bold"/>
            </RelativeLayout>


            <EditText
                android:id="@+id/et_decription"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_below="@id/price_relative"
                android:background="@drawable/bg_edit"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:hint="@string/selling_edit_description_hint"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:textCursorDrawable="@drawable/edit_cursor"
                android:textSize="16sp"
                android:textColorHint="#4A000000"
                android:fontFamily="@font/brandfont"
                android:textStyle="bold"/>

            <RelativeLayout
                android:id="@+id/select_pos_relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_decription">
                <TextView
                    android:id="@+id/tv_select_pos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selling_edit_select_place"
                    android:layout_marginLeft="25dp"
                    android:layout_marginTop="20dp"
                    android:textSize="16sp"
                    android:textColor="#B5000000"
                    android:fontFamily="@font/brandfont"
                    android:textStyle="bold"/>

                <ImageButton
                    android:id="@+id/ib_select_position"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_action_select"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@id/tv_select_pos"
                    android:background="@null"
                    android:layout_marginBottom="10dp"
                    android:layout_marginRight="30dp"/>
            </RelativeLayout>



        </RelativeLayout>


    </ScrollView>




</RelativeLayout>